fix(css): Fix padding and alignment

--- a/business_card/styles.css
+++ b/business_card/styles.css
@@ -81,11 +81,16 @@
 }
 
 .main-card{
+    display:flex;
+    flex-direction: column;
     border: 1px solid white;
     border-radius: 10px;
     width: 300px;
     height: 550px;
+    padding:10px;
+    gap:5px;
 }
+
 
 .socials-button{
     background-color:transparent;
